add link to repo from app

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div id="weeks-container"></div>
   </form>
   <p id="remaining-time">Remaining Time: 120h 0m</p>
+  <p class="small-font">Check out the code on <a href="https://github.com/mattmorganpdx/hoursCalc" target="_blank">GitHub</a></p>
   <script src="js/app.js"></script>
 </body>
 </html>
